--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Retrive Data from Dams of Tamil Nadu API</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Pagination with Fetch API</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+    <!-- Page Title -->
+    <h1 class="text-center" id="title">Dams of Tamil Nadu</h1>
+    <!-- Page Description -->
+    <p id="description">Displaying dam data from tn-gov API using promise with pagination</p>
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>District</th>
+          </tr>
+        </thead>
+        <tbody id="data"></tbody>
+      </table>
+    </div>
+    <div class="text-center mt-3">
+      <!-- Previous and Next Buttons -->
+      <button class="btn btn-primary mr-2" id="prevBtn">Previous</button>
+      <button class="btn btn-primary" id="nextBtn">Next</button>
+    </div>
+  </div>
+  <!-- Script Import -->
+  <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
