--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <!-- Script Import -->
-  <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
+<!--   <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script> -->
   <script src="script.js"></script>
 </body>
 </html>
